(Elastic) small spacing fix in list options menu

--- a/skins/elastic/swipe.less
+++ b/skins/elastic/swipe.less
@@ -5,6 +5,10 @@
 @import (reference) "../../../../skins/elastic/styles/variables";
 @import (reference) "../../../../skins/elastic/styles/mixins";
 
+#listoptions-menu > fieldset.swipe {
+  margin-top: 1.5rem;
+}
+
 #swipe-action {
   position: absolute;
   background-color: lighten(@color-black, 85%);
